added link to dissolution list

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,6 +2,7 @@
 
 <ol>
 	<%= content_tag( 'li', link_to( 'Parliament periods', parliament_list_url ) ) %>
+	<%= content_tag( 'li', link_to( 'Dissolution periods', dissolution_period_list_url ) ) %>
 </ol>
 
 <%= image_tag( '/schema.png' ) %>
