--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-gb">
 <head>
-  <title>ParliamentCalendar</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
+  <title>Parliament Calendar</title>
+  <style>
+  body {font-family:system-ui;padding:1rem;margin:auto;max-width:38rem;}  
+  img {
+  max-width:100%;
+max-height:100%;
+}
+  </style>
+      <meta name="viewport" content="width=device-width">
 </head>
 <body>
+<header><nav></nav>
 
+<h1>Parliament Calendar</h1>
+</header>
+<main>
 <%= yield %>
-
+</main>
+<footer>
+</footer>
 </body>
 </html>
