--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,20 +8,21 @@
   max-width:100%;
 max-height:100%;
 }
+h1 {font-weight: normal;}
   </style>
       <meta name="viewport" content="width=device-width">
 </head>
 <body>
 <header><nav>
-<p><a href="/">Parliament Calendar</a></p>
+<p><a href="/">Parliament Calendar</a> &rarr; <strong><%= @title || "Home" %></strong></p>
 <p>
-Periods &mdash; <%= link_to( 'Parliaments', parliament_list_url )  %>
+<%= link_to( 'Parliaments', parliament_list_url )  %>
 <%= link_to( 'Dissolutions', dissolution_period_list_url )  %>
 </p>
 
 </nav>
 
-<h1>Parliament Calendar</h1>
+<h1><%= @title || "Parliament Calendar" %></h1>
 </header>
 <main>
 <%= yield %>
