--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,8 @@ h1 {font-weight: normal;}
 <p>
 <%= link_to( 'Parliaments', parliament_list_url )  %>
 <%= link_to( 'Dissolutions', dissolution_period_list_url )  %>
+<%= link_to( 'Sessions', session_list_url )  %>
+<%= link_to( 'Prorogations', prorogation_period_list_url )  %>
 </p>
 
 </nav>
