--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,19 @@
 <head>
   <title>Parliament Calendar</title>
   <style>
+  html {
+  font-size: 16px;
+}
+@media screen and (min-width: 320px) {
+  html {
+    font-size: calc(16px + 6 * ((100vw - 320px) / 680));
+  }
+}
+@media screen and (min-width: 1000px) {
+  html {
+    font-size: 22px;
+  }
+} 
   body {line-height:1.4;font-family:system-ui;padding:1rem;margin:auto;max-width:38rem;}  
   img {
   max-width:100%;
