--- a/app/views/parliament/_parliament.html.erb
+++ b/app/views/parliament/_parliament.html.erb
@@ -1,1 +1,1 @@
-<%= content_tag( 'li', link_to( parliament.label, parliament_show_url( :parliament => parliament ) ) ) %>
+<li><%= link_to( parliament.label, parliament_show_url( :parliament => parliament ) ) %></li>
