--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@ body {line-height:1.4;font-family:system-ui;padding:1rem;margin:auto;max-width:3
   max-width:100%;
 max-height:100%;
 }
-a {text-decoration:none;}
+a {text-decoration:none;border-bottom:thin dotted paleblue;}
 h1 {font-weight: normal;}
 main {border-top:1pt solid gray;
 border-bottom:1pt solid gray;}
