--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Parliament Calendar</title>
   <style>
-body {line-height:1.4;font-family:system-ui;padding:1rem;margin:auto;max-width:40rem;font-size:1.5rem;color:black;background-color:white;}  
+body {line-height:1.4;font-family:system-ui;padding:1rem;margin:auto;max-width:40rem;color:black;background-color:white;}  
   img {
   max-width:100%;
 max-height:100%;
