space rather than lines

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,8 @@ max-height:100%;
 }
 a {text-decoration:none;}
 h1 {font-weight: normal;}
-main {border-top:1pt solid gray;
-border-bottom:1pt solid gray;}
-footer {padding:1rem 0;color:gray;}
+main {padding:2rem 0;}
+footer {}
   </style>
       <meta name="viewport" content="width=device-width">
 </head>
