--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@ body {line-height:1.4;font-family:system-ui;padding:1rem;margin:auto;max-width:4
   max-width:100%;
 max-height:100%;
 }
+ol {list-style-type: none;padding:0;margin:0;}
+li {margin-bottom:0.25rem;}
 a {text-decoration:none;}
 h1 {font-weight: normal;}
 main {padding:2rem 0;}
