--- a/app/views/meta/calendar_sync.html.erb
+++ b/app/views/meta/calendar_sync.html.erb
@@ -1,4 +1,4 @@
-<ul>
+<ul id="meta">
 	<li>You <em>cannot</em> edit the date(s) of any appointment because the application will create duplicates of the old date(s) and the new date(s).</li>
 	<li>You <em>cannot</em> create a timed, part day appointment across more than one day because the application will ignore the final day.</li>
 	<li>You can <strong>create a single day, full day appointment</strong>: the application will mark a single day.</li>
