update calendar sync page

--- a/app/views/meta/calendar_sync.html.erb
+++ b/app/views/meta/calendar_sync.html.erb
@@ -1,19 +1,30 @@
-<ul id="meta">
-	<li>You can <strong>edit the date(s) of any appointment</strong>: the application will ...</li>
-	<li>You can <strong>create a timed, part day appointment across more than one day</strong>: the application will ...</li>
-	<li>You can <strong>create a single day, full day appointment</strong>: the application will mark a single day.</li>
-	<li>You can <strong>delete a single day, full day appointment</strong>: this will delete that day from the application.</li>
-	<li>You can <strong>create a timed appointment on a single day</strong>: the application will mark a single day.</li>
-	<li>You can <strong>delete a timed appointment on a single day</strong>: this will delete that day from the application.</li>
-	<li>You can <strong>create a multi-day all day appointment</strong>: the application will mark all included days as a single 'day'. For sitting days, this would allow us to create sittings that span dates. If you want to create individual days, you should create a single day, full day appointment.</li>
-	<li>You can <strong>delete a multi-day all day appointment</strong>: this will delete those days from the application.</li>
-	<li>You can <strong> create a timed, part day appointment across more than one day</strong>: the application will mark all included days as a single 'day'. For sitting days, this would allow us to create sittings that span dates and have times. If you want to create individual days, you should create a single day, full day appointment.</li>
-	<li>You can <strong>delete a timed, part day appointment across more than one day</strong>: this will delete those days from the application.</li>
-	<li>You can <strong>create a set of individual days as a recurring appointment</strong>: the application will mark single days.</li>
-	<li>You can <strong>delete a single appointment from a set of recurring appointments</strong>: this will delete that day from the application.</li>
-	<li>You can <strong>edit the date(s) of an appointment</strong>: this will delete the old days and create the new days in the application.</li>
-</ul>
 
+
+<section>
+<h2>Creating appointments</h2>
+<p>You can <strong>create a timed, part day appointment across more than one day</strong>: the application will ...</p>
+	<p>You can <strong>create a single day, full day appointment</strong>: the application will mark a single day.</p>
+	<p>You can <strong>create a timed appointment on a single day</strong>: the application will mark a single day.</p>
+		<p>You can <strong>create a multi-day all day appointment</strong>: the application will mark all included days as a single 'day'. For sitting days, this would allow us to create sittings that span dates. If you want to create individual days, you should create a single day, full day appointment.</p>
+	<p>You can <strong> create a timed, part day appointment across more than one day</strong>: the application will mark all included days as a single 'day'. For sitting days, this would allow us to create sittings that span dates and have times. If you want to create individual days, you should create a single day, full day appointment.</p>
+	<p>You can <strong>create a set of individual days as a recurring appointment</strong>: the application will mark single days.</p>
+</section>
+
+<section>
+<h2>Editing appointments</h2>
+<p>You can <strong>edit the date(s) of any appointment</strong>: the application will ...</p>
+	<p>You can <strong>edit the date(s) of an appointment</strong>: this will delete the old days and create the new days in the application.</p>
+	</section>
+	
+	<section>
+<h2>Deleting appointments</h2>	
+<p>You can <strong>delete a single day, full day appointment</strong>: this will delete that day from the application.</p>
+	<p>You can <strong>delete a timed appointment on a single day</strong>: this will delete that day from the application.</p>
+	<p>You can <strong>delete a multi-day all day appointment</strong>: this will delete those days from the application.</p>
+	<p>You can <strong>delete a timed, part day appointment across more than one day</strong>: this will delete those days from the application.</p>
+	<p>You can <strong>delete a single appointment from a set of recurring appointments</strong>: this will delete that day from the application.</p>
+
+</section>
 
 
 
