--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,8 @@ ul#meta {list-style-type: none;padding:0;margin:0;}
 ul#meta li {margin:1rem 0;}
 a {text-decoration:none;}
 h1 {font-weight: normal;}
-main {padding:2rem 0;}
+h2 {font-weight: normal;}
+main {padding:1.5rem 0;}
 footer {}
   </style>
       <meta name="viewport" content="width=device-width">
