calendar sync page styles

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@ ul#meta {list-style-type: none;padding:0;margin:0;}
 ul#meta li {margin:1rem 0;}
 a {text-decoration:none;}
 h1 {font-weight: normal;}
-h2 {font-weight: normal;}
+h2 {font-weight: normal;padding-top:1rem;}
 main {padding:1.5rem 0;}
 footer {}
   </style>
