--- a/app/views/calculator/calculate.html.erb
+++ b/app/views/calculator/calculate.html.erb
@@ -1,1 +1,7 @@
-shows a date one assumes
+<% if @error_message -%>
+	<%= content_tag( 'p', "Ooops. We've run out of calendar." ) %>
+<% else -%>
+	<%= content_tag( 'p', 'The anticipated end date of the scrutiny period is:')%>
+	<%= content_tag( 'p', @date.date.strftime( '%A, %-d %B %Y') ) %>
+	<%= content_tag( 'p', 'Note that this date is likely to change if sitting days change.' ) %>
+<% end -%>
