changed estimated to anticipated

--- a/app/views/calculator/index.html.erb
+++ b/app/views/calculator/index.html.erb
@@ -30,7 +30,7 @@
 			<tr>
 				<td />
 				<td>
-					<input type="submit" value="Calculate estimated scrutiny period end date" />
+					<input type="submit" value="Calculate anticipated scrutiny period end date" />
 				</td>
 			</tr>
 		</tbody>
