added schema under meta

--- a/app/views/meta/index.html.erb
+++ b/app/views/meta/index.html.erb
@@ -1,3 +1,4 @@
 <ol>
-	<%= content_tag( 'li', link_to( 'Calendar sync', meta_calendar_sync_url ) ) %>
+	<%= content_tag( 'li', link_to( 'Calendar sync documentation', meta_calendar_sync_url ) ) %>
+	<%= content_tag( 'li', link_to( 'Database schema', meta_schema_url ) ) %>
 </ol>
