--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,8 +34,8 @@ footer {}
 <%= link_to( 'Sessions', session_list_url )  %>
 &middot;
 <%= link_to( 'Prorogations', prorogation_period_list_url )  %>
-&middot;
-<%= link_to( 'Meta', meta_list_url )  %>
+<br>
+<%= link_to( 'More about this application', meta_list_url )  %>
 
 
 </nav>
