--- a/app/views/meta/index.html.erb
+++ b/app/views/meta/index.html.erb
@@ -2,3 +2,16 @@
 	<%= content_tag( 'li', link_to( 'Calendar sync documentation', meta_calendar_sync_url ) ) %>
 	<%= content_tag( 'li', link_to( 'Database schema', meta_schema_url ) ) %>
 </ol>
+
+<h2>Other calendars</h2>
+
+<nav>
+<a href="http://www.legislation.gov.uk/new">Legislation</a>
+&middot;
+<a href="https://calendar.parliament.uk">Parliament</a> &middot; <a href="https://www.theyworkforyou.com/calendar/">TheyWorkForYou</a>
+&middot;
+<a href="https://www.gov.uk/bank-holidays">Bank holidays</a>
+&middot;
+<a href="https://parliamentlive.tv/Guide">Parliamentlive.tv</a>
+&middot;
+<a href="https://calendar.google.com/">Google</a></nav>
