--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@ a {text-decoration:none;}
 h1 {font-weight: normal;}
 h2 {font-weight: normal;padding-top:1rem;}
 main {padding:1.5rem 0;}
-footer {}
+footer {border-top:thin dotted gray;}
   </style>
       <meta name="viewport" content="width=device-width">
 </head>
