Shifting footer and nav text

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,9 +25,7 @@ footer {border-top:thin dotted gray;}
 
 <nav>
 
-<strong><a href="/">Parliament Calendar</a></strong>
-&middot;
-<%= link_to( 'More about this application', meta_list_url )  %>
+<strong><a href="/">Calculate scrutiny period</a></strong>
 <br>
 <%= link_to( 'Parliaments', parliament_list_url )  %>
 &middot;
@@ -47,6 +45,7 @@ footer {border-top:thin dotted gray;}
 </main>
 
 <footer>
+<p><%= link_to( 'About this application', meta_list_url )  %></p>
 </footer>
 </body>
 </html>
