simpler form layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,25 @@ h1 {font-weight: normal;}
 h2 {font-weight: normal;padding-top:1rem;}
 main {padding:1.5rem 0;}
 footer {border-top:thin dotted gray;}
+form#calculator {
+width:100%;
+}
+form#calculator input {
+font-size:larger;
+font-family: monospace;
+padding:0.25rem;
+font-weight:bold;
+}
+
+form#calculator input#calculate {
+}
+form#calculator label {
+  float: left;
+  text-align: right;
+  margin-right: 1rem;
+  width: 50%;
+  font-weight: bold;
+}
   </style>
       <meta name="viewport" content="width=device-width">
 </head>
