--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,38 +1,26 @@
-<form action="calculator/calculate" method="GET">
-	<table>
-		<tbody>
-			<tr>
-				<th>
-					<%= content_tag( 'label', 'Procedure:', :for => 'procedure' ) %>
-				</th>
-				<td>
-					<select id="procedure" name="procedure">
-						<option value="1">Proposed Negative Statutory Instrument</option>
-					</select>
-				</td>
-			</tr>
-			<tr>
-				<th>
-					<%= content_tag( 'label', 'Scrutiny start date:', :for => 'start-date' ) %>
-				</th>
-				<td>
-					<input type="date" name="start-date" id="start-date" />
-				</td>
-			</tr>
-			<tr>
-				<th>
-					<%= content_tag( 'label', 'Day count:', :for => 'day-count' ) %>
-				</th>
-				<td>
-					<input type="number" name="day-count" id="day-count" />
-				</td>
-			</tr>
-			<tr>
-				<td />
-				<td>
-					<input type="submit" value="Calculate anticipated scrutiny period end date" />
-				</td>
-			</tr>
-		</tbody>
-	</table>
+<form action="calculator/calculate" method="GET" id="calculator">
+
+<p>
+<%= content_tag( 'label', 'Procedure', :for => 'procedure' ) %>			
+<select id="procedure" name="procedure">
+<option value="1">Proposed Negative Statutory Instrument</option>
+</select>
+</p>
+	
+<p>
+<%= content_tag( 'label', 'Scrutiny start date: YYYY-MM-DD', :for => 'start-date' ) %>
+<input type="date" name="start-date" id="start-date">
+<small>
+</p>
+
+<p>
+<%= content_tag( 'label', 'Day count', :for => 'day-count' ) %>
+<input type="number" name="day-count" id="day-count">
+</p>
+
+<p>
+<label for="calculate">Scrutiny period end date ...</label>
+<input type="submit" id="calculate" value="Calculate">
+</p>
+
 </form>
