styles and titles

--- a/app/views/calculator/calculate.html.erb
+++ b/app/views/calculator/calculate.html.erb
@@ -1,7 +1,15 @@
 <% if @error_message -%>
 	<%= content_tag( 'p', @error_message ) %>
 <% else -%>
-	<%= content_tag( 'p', "For a scrutiny period of #{@day_count} days, starting from #{@start_date.date.strftime( '%-d %B %Y') }, the anticipated end date of the scrutiny period is:" )%>
-	<%= content_tag( 'p', @date.date.strftime( '%A, %-d %B %Y') ) %>
-	<%= content_tag( 'p', 'The anticipated end date of the scrutiny period will need to be recalculated if sitting days change within that period.' ) %>
+
+<p>For a scrutiny period of <strong><%= @day_count %> days</strong>, starting from  <strong><%= @start_date.date.strftime( '%-d %B %Y') %></strong> &mdash;</p>
+
+<p>&mdash; the <u>anticipated</u> end date of the scrutiny period is:</p>
+
+	<strong><big><time><%= @date.date.strftime( '%A, %-d %B %Y') %></time></big></strong>
+	
+	<p>If sitting days change within that period, the end date of the scrutiny period will need to be recalculated.</p>
+	
+	
+	
 <% end -%>
