--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,14 +26,14 @@ padding:0.25rem;
 font-weight:bold;
 }
 
-form#calculator input#calculate {
-}
 form#calculator label {
-  float: left;
-  text-align: right;
-  margin-right: 1rem;
-  width: 50%;
   font-weight: bold;
+}
+
+form#calculator div {
+  background-color: lightsteelblue;
+  padding:0.5rem 1rem;
+  margin:0.75rem 0;
 }
   </style>
       <meta name="viewport" content="width=device-width">
