added link to house list

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,6 +53,8 @@ form#calculator div {
 <%= link_to( 'Sessions', session_list_url )  %>
 &middot;
 <%= link_to( 'Prorogations', prorogation_period_list_url )  %>
+&middot;
+<%= link_to( 'Houses', house_list_url )  %>
 </nav>
 
 <h1><%= @title || "Parliament Calendar" %></h1>
