--- a/app/views/house/show.html.erb
+++ b/app/views/house/show.html.erb
@@ -4,3 +4,8 @@
 <ol>
 	<%= render :partial => 'sitting_day/sitting_day', :collection => @house.sitting_days %>
 </ol>
+
+<%= content_tag( 'h2', 'Adjournment days' ) %>
+<ol>
+	<%= render :partial => 'adjournment_day/adjournment_day', :collection => @house.adjournment_days %>
+</ol>
