--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,6 +8,7 @@
 <select id="procedure" name="procedure">
 
 <option value="1">Proposed Negative Statutory Instrument</option>
+<option value="2">Statutory Instrument praying period (Commons only)</option>
 </select>
 </p>
 	</div>
