no idea what changed here

--- a/app/views/calculator/_form.html.erb
+++ b/app/views/calculator/_form.html.erb
@@ -4,7 +4,7 @@
 <form action="calculator/calculate" method="GET" id="calculator">
 
 <p>
-<%= content_tag( 'label', 'Procedurey', :for => 'procedure' ) %>			
+<%= content_tag( 'label', 'Procedure', :for => 'procedure' ) %>
 <select id="procedure" name="procedure">
 <option value="1">Proposed Negative Statutory Instrument</option>
 <option value="2">Statutory Instrument praying period (Commons only)</option>
