--- a/app/views/calculator/calculate.html.erb
+++ b/app/views/calculator/calculate.html.erb
@@ -2,11 +2,11 @@
 	<%= content_tag( 'p', @error_message ) %>
 <% else -%>
 
-<p>For a scrutiny period of <strong><%= @day_count %> days</strong>, starting from  <strong><%= @start_date.date.strftime( '%-d %B %Y') %></strong> &mdash;</p>
+<p>For a scrutiny period of <strong><%= @day_count %> days</strong>, starting from  <strong><%= @start_date.strftime( '%-d %B %Y') %></strong> &mdash;</p>
 
 <p>&mdash; the <u>anticipated</u> end date of the scrutiny period is:</p>
 
-	<strong><big><time><%= @date.date.strftime( '%A, %-d %B %Y') %></time></big></strong>
+	<strong><big><time><%= @clock_date.strftime( '%A, %-d %B %Y') %></time></big></strong>
 	
 	<p>If sitting days change within that period, the end date of the scrutiny period will need to be recalculated.</p>
 	
