added bicameral si to form

--- a/app/views/calculator/_form.html.erb
+++ b/app/views/calculator/_form.html.erb
@@ -8,6 +8,7 @@
 <select id="procedure" name="procedure">
 <option value="1">Proposed Negative Statutory Instrument</option>
 <option value="2">Statutory Instrument praying period (Commons only)</option>
+<option value="3">Statutory Instrument praying period (Commons and Lords)</option>
 </select>
 </p>
 	
