added made affirmative calculator

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,7 +9,8 @@
 
 <option value="1">Proposed Negative Statutory Instrument</option>
 <option value="2">Statutory Instrument praying period (Commons only)</option>
-<option value="2">Statutory Instrument praying period (Commons and Lords)</option>
+<option value="3">Statutory Instrument praying period (Commons and Lords)</option>
+<option value="5">Statutory Instrument approval period (Commons and Lords)</option>
 </select>
 </p>
 	</div>
