--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,41 +1,39 @@
-<form action="calculator/calculate" method="GET" id="calculator">
+<form action="calculator/calculate" method="GET">
 
-<div>
-<p>
-<%= content_tag( 'label', 'Procedure', :for => 'procedure' ) %>	
-</p>
-<p>		
-<select id="procedure" name="procedure">
+<fieldset>
+<legend>Procedure</legend>
 
-<option value="1">Proposed Negative Statutory Instrument</option>
-<option value="2">Statutory Instrument praying period (Commons only)</option>
-<option value="2">Statutory Instrument praying period (Commons and Lords)</option>
-</select>
-</p>
-	</div>
-	<div>
 <p>
-<%= content_tag( 'label', 'Scrutiny start date: YYYY-MM-DD', :for => 'start-date' ) %>
+<input type="radio" id="pnsi" name="procedure" value="1">
+<label for="pnsi">Proposed Negative Statutory Instrument</label>
 </p>
-<p>	
+
+<p>
+<input type="radio" id="sippc" name="procedure" value="2">
+<label for="sippc">Statutory Instrument praying period (Commons only)</label>
+</p>
+
+<p>
+<input type="radio" id="sippcl" name="procedure" value="3">
+<label for="sippcl">Statutory Instrument praying period (Commons and Lords)</label>
+</p>
+</fieldset>
+
+<p>
+<%= content_tag( 'label', 'Scrutiny start date (YYYY-MM-DD)', :for => 'start-date' ) %>
 <input type="date" name="start-date" id="start-date">
+
 </p>
-</div>
-	<div>
+
+
 <p>
 <%= content_tag( 'label', 'Day count', :for => 'day-count' ) %>
-</p>
-<p>	
 <input type="number" name="day-count" id="day-count">
 </p>
-</div>
-	<div>
+
 <p>
-<label for="calculate">Scrutiny period end date ...</label>
-</p>
-<p>	
+
+<!-- <label for="calculate">Calculate scrutiny period end date</label> -->
 <input type="submit" id="calculate" value="Calculate">
-</p>
-</div>
-	
+</p>	
 </form>
