--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,65 +2,56 @@
 <html lang="en-gb">
 <head>
   <title>Parliament Calendar</title>
-  <style>
-body {line-height:1.4;font-family:system-ui;padding:1rem;margin:auto;max-width:40rem;color:black;background-color:white;}  
-  img {
-  max-width:100%;
-max-height:100%;
-}
-ol {list-style-type: none;padding:0;margin:0;}
-ul#meta {list-style-type: none;padding:0;margin:0;}
-ul#meta li {margin:1rem 0;}
-a {text-decoration:none;}
-h1 {font-weight: normal;}
-h2 {font-weight: normal;padding-top:1rem;}
-main {padding:1.5rem 0;}
-footer {border-top:thin dotted gray;}
-form#calculator {
-width:100%;
-}
-form#calculator input {
-font-size:larger;
-font-family: monospace;
-padding:0.25rem;
-font-weight:bold;
-}
-
-form#calculator label {
-  font-weight: bold;
-}
-
-form#calculator div {
-  background-color: lightsteelblue;
-  padding:0.5rem 1rem;
-  margin:0.75rem 0;
-}
-  </style>
       <meta name="viewport" content="width=device-width">
+      <link rel="stylesheet" href="/light.min.css">
+<style>
+:root {
+  --background-body: #fff;
+  --background: #efefef;
+  --background-alt: #f7f7f7;
+  --selection: #9e9e9e;
+  --text-main: #363636;
+  --text-bright: #000;
+  --text-muted: #999;
+  --links: #0076d1;
+  --focus: #0096bf;
+  --border: #dbdbdb;
+  --code: #000;
+  --animation-duration: 0.1s;
+  --button-hover: #ddd;
+  --scrollbar-thumb: color-mod(var(--button-hover) lightness(-3%));
+  --scrollbar-thumb-hover: color-mod(var(--button-hover) lightness(-10%));
+  --form-placeholder: #949494;
+  --form-text: #000;
+  --variable: #39a33c;
+  --highlight: #ff0;
+  --select-arrow: svg-load('./assets/select-arrow.svg', fill: #161f27);
+}
+main {
+padding:2rem 0;
+}
+h1 {font-weight:normal;}
+</style>
 </head>
 <body>
 <header>
-
-
 <nav>
-
-<strong><a href="/">Calculate scrutiny period</a></strong>
+<p>
+<a href="/">Calculate scrutiny period</a>
 <br>
 <%= link_to( 'Parliaments', parliament_list_url )  %>
 &middot;
 <%= link_to( 'Dissolutions', dissolution_period_list_url )  %>
+&middot;
+<%= link_to( 'About this application', meta_list_url )  %>
+</p>
+
 </nav>
 
 <h1><%= @title || "Parliament Calendar" %></h1>
-
 </header>
-
 <main>
 <%= yield %>
 </main>
-
-<footer>
-<p><%= link_to( 'About this application', meta_list_url )  %></p>
-</footer>
 </body>
 </html>
