--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,45 +1,1 @@
-<form action="calculator/calculate" method="GET">
-
-<fieldset>
-<legend>Procedure</legend>
-
-<p>
-<input type="radio" id="pnsi" name="procedure" value="1">
-<label for="pnsi">Proposed Negative Statutory Instrument</label>
-</p>
-
-<p>
-<input type="radio" id="sippc" name="procedure" value="2">
-<label for="sippc">Statutory Instrument praying period (Commons only)</label>
-</p>
-
-<p>
-<input type="radio" id="sippcl" name="procedure" value="3">
-<label for="sippcl">Statutory Instrument praying period (Commons and Lords)</label>
-</p>
-
-<p>
-<input type="radio" id="siapcl" name="procedure" value="5">
-<label for="siapcl">Statutory Instrument approval period (Commons and Lords)</label>
-</p>
-
-</fieldset>
-
-<p>
-<%= content_tag( 'label', 'Scrutiny start date (YYYY-MM-DD)', :for => 'start-date' ) %>
-<input type="date" name="start-date" id="start-date">
-
-</p>
-
-
-<p>
-<%= content_tag( 'label', 'Day count', :for => 'day-count' ) %>
-<input type="number" name="day-count" id="day-count">
-</p>
-
-<p>
-
-<!-- <label for="calculate">Calculate scrutiny period end date</label> -->
-<input type="submit" id="calculate" value="Calculate">
-</p>	
-</form>
+<%= render "calculator/form" %>
