--- a/app/views/calculator/calculate.html.erb
+++ b/app/views/calculator/calculate.html.erb
@@ -12,7 +12,7 @@
 
 <ul>
 
-	<li>With procedure type <%= @procedure_number %></li>
+	<li>With procedure type <%= @procedure.name %></li>
 	
 	<li>For a scrutiny period of <strong><%= @day_count %> days</strong></li>
 	
