--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,36 +2,15 @@
 <html lang="en-gb">
 <head>
   <title>Parliament Calendar</title>
-      <meta name="viewport" content="width=device-width">
-      <link rel="stylesheet" href="/light.min.css">
+      <meta name="viewport" content="width=device-width">      
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/kognise/water.css@latest/dist/light.min.css">
 <style>
-:root {
-  --background-body: #fff;
-  --background: #efefef;
-  --background-alt: #f7f7f7;
-  --selection: #9e9e9e;
-  --text-main: #363636;
-  --text-bright: #000;
-  --text-muted: #999;
-  --links: #0076d1;
-  --focus: #0096bf;
-  --border: #dbdbdb;
-  --code: #000;
-  --animation-duration: 0.1s;
-  --button-hover: #ddd;
-  --scrollbar-thumb: color-mod(var(--button-hover) lightness(-3%));
-  --scrollbar-thumb-hover: color-mod(var(--button-hover) lightness(-10%));
-  --form-placeholder: #949494;
-  --form-text: #000;
-  --variable: #39a33c;
-  --highlight: #ff0;
-  --select-arrow: svg-load('./assets/select-arrow.svg', fill: #161f27);
-}
 main {
 padding:2rem 0;
 }
 h1 {font-weight:normal;}
 </style>
+
 </head>
 <body>
 <header>
