changed procedure select buttons

--- a/app/views/procedure/_procedure.html.erb
+++ b/app/views/procedure/_procedure.html.erb
@@ -1,4 +1,7 @@
-<tr>
-	<%= content_tag( 'td', link_to( procedure.name, procedure_show_url( :procedure => procedure ) ) ) %>
-	<%= content_tag( 'td', link_to( procedure.active_label, procedure_flip_url( :procedure => procedure ) ) ) %>
-</tr>
+<div>
+<button style="width:6rem;"><%= link_to( procedure.status_label, procedure_flip_url( :procedure => procedure ) )  %>
+</button>
+
+<%= link_to( procedure.name, procedure_show_url( :procedure => procedure ) )  %></div>
+
+	
