--- a/app/views/procedure/show.html.erb
+++ b/app/views/procedure/show.html.erb
@@ -1,2 +1,10 @@
-<%= content_tag( 'h2', @procedure.name ) %>
-<%= content_tag( 'p', "Active: #{link_to( @procedure.active_label, procedure_flip_url ) }".html_safe ) %>
+<h2><%= @procedure.name %></h2>
+
+
+<p>Currently active? <strong><%= @procedure.active_label %></strong></p>
+
+<p>
+<button>
+<%= "#{link_to( @procedure.status_label, procedure_flip_url ) }".html_safe %>
+</button>
+</p>
