--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/kognise/water.css@latest/dist/light.min.css">
             <style>
             body.development {border-bottom:4em solid pink;}
+            button {border:1pt solid #0076d1;}
             </style>
 </head>
 <body class="<%= Rails.env %>">
