--- a/app/views/calculator/_form.html.erb
+++ b/app/views/calculator/_form.html.erb
@@ -1,23 +1,23 @@
 <form action="calculator/calculate" method="GET">
 
 <fieldset>
-<legend>Set a procedure</legend>
+<legend>Choose a procedure</legend>
 
 <%= render :partial => 'calculator/procedure', :collection => @procedures %>
 
 </fieldset>
 
 <p>
-<%= content_tag( 'label', 'Scrutiny start date (YYYY-MM-DD)', :for => 'start-date' ) %>
-<br>
+<%= content_tag( 'label', 'Set a scrutiny start date (YYYY-MM-DD)', :for => 'start-date' ) %>
+<br><br>
 <input type="date" name="start-date" id="start-date">
 
 </p>
 
 
 <p>
-<%= content_tag( 'label', 'Day count', :for => 'day-count' ) %>
-<br>
+<%= content_tag( 'label', 'How many days to count', :for => 'day-count' ) %>
+<br><br>
 <input type="number" name="day-count" id="day-count">
 </p>
 
