--- a/app/views/calculator/calculate.json.erb
+++ b/app/views/calculator/calculate.json.erb
@@ -2,7 +2,7 @@
 <% if @error_message -%>
 	"error": "<%= @error_message %>",
 <% else -%>
-	"anticipated_date": "<%= @clock_date.strftime( '%A %-d %B %Y') %>",
+	"anticipated_date": "<%= @end_date.strftime( '%A %-d %B %Y') %>",
 	"procedure": "<%= @procedure.name %>",
 	"day_count": "<%= @day_count %>",
 	"start_date": "<%= @start_date.strftime( '%-d %B %Y') %>"<% end -%>
