add link to sessions

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,8 @@ Parliament calendar &mdash; <a href="/">Calculate scrutiny period</a>
 &mdash;
 <%= link_to( 'Dissolutions', dissolution_period_list_url )  %>
 &mdash;
+<%= link_to( 'Sessions', session_list_url )  %>
+&mdash;
 <%= link_to( 'About this application', meta_list_url )  %>
 </p>
 
