added display of praying / not praying type day

--- a/app/views/session/show.html.erb
+++ b/app/views/session/show.html.erb
@@ -10,8 +10,10 @@
 	<thead>
 		<tr>
 			<%= content_tag( 'td', 'Date' ) %>
-			<%= content_tag( 'td', 'House of Commons' ) %>
-			<%= content_tag( 'td', 'House of Lords' ) %>
+			<%= content_tag( 'td', 'House of Commons day type' ) %>
+			<%= content_tag( 'td', 'House of Commons praying' ) %>
+			<%= content_tag( 'td', 'House of Lords day type' ) %>
+			<%= content_tag( 'td', 'House of Lords praying' ) %>
 		</tr>
 	</thead>
 	<tbody>
