--- a/app/views/meta/index.html.erb
+++ b/app/views/meta/index.html.erb
@@ -1,5 +1,6 @@
 <ol>
 	<%= content_tag( 'li', link_to( 'Calendar sync documentation', meta_calendar_sync_url ) ) %>
+	<%= content_tag( 'li', link_to( 'Prorogation and dissolution', meta_prorogation_dissolution_url ) ) %>
 	<%= content_tag( 'li', link_to( 'Database schema', meta_schema_url ) ) %>
 </ol>
 
