--- a/app/views/meta/prorogation_and_dissolution.html.erb
+++ b/app/views/meta/prorogation_and_dissolution.html.erb
@@ -1,25 +1,25 @@
 <%= content_tag( 'h1', 'What to do at prorogation and dissolution' ) %>
 
-<%= content_tag( 'p', 'At the end of a session, Parliament prorogues. At the end of a parliament period, Parliament dissolves. Dissolution is sometimes preceded by a short period of prorogation.' ) %>
+<%= content_tag( 'p', 'At the end of a session, Parliament prorogues. Prorogation is the formal end to the parliamentary year.  At the end of a parliament period, Parliament dissolves. Dissolution is the official term for the end of a Parliament before a general election. Dissolution is sometimes preceded by a short period of prorogation.' ) %>
 
-<%= content_tag( 'p', "Our Google calendars are designed to cope with periods when Parliament is in session. They allow us to state when a House is sitting, sitting virtually or adjourned. Adjournment is used to cover 'non-sitting Fridays', weekends, bank holidays and recess." ) %>
+<%= content_tag( 'p', "Our Google calendars are designed to cope with periods when Parliament is in session. They allow us to state when a House is sitting, sitting virtually or adjourned. Adjournment describes 'non-sitting Fridays', weekends, bank holidays and recess." ) %>
 
-<%= content_tag( 'p', 'The calendars are not designed to cope with periods when Parliament is either prorogued or dissolved. In such cases additional actions need to be taken.' ) %>
+<%= content_tag( 'p', 'The calendars are not designed to cope with periods when Parliament is either prorogued or dissolved. Upon announcement of these periods certain actions should be taken.' ) %>
 
 <%= content_tag( 'h2', 'What to do upon the announcement of prorogation or dissolution' ) %>
 
-<%= content_tag( 'p', "In both cases, action must be taken to pause the application's syncing script, pull a copy of the database from Heroku, add data to the database by hand, push the updated database to Heroku and restart the syncing scripts. In order to do this we will need access to the Heroku account running the application. The steps are:" )%>
+<%= content_tag( 'p', "In both cases, action must be taken to pause the application's syncing script, pull a copy of the database from Heroku, add data to the database by hand, push the updated database to Heroku and restart the syncing scripts. In order to do this we need access to the Heroku account running the application." )%>
+
+<%= content_tag( 'p', "The steps are:" )%>
 
 <ol>
-	<%= content_tag( 'li', 'Sign into Heroku.' ) %>
-	<%= content_tag( 'li', 'Find and navigate to the application (parliament-calendar).' ) %>
-	<%= content_tag( 'li', "Navigate to the 'resources' tab." ) %>
-	<%= content_tag( 'li', "Click on 'Heroku Scheduler'." ) %>
-	<%= content_tag( 'li', "Click on the cross with tooltip 'Delete this job'." ) %>
-	<%= content_tag( 'li', "This will stop the application importing updates from the Google calendars until we've finished the rest of the task." ) %>
-	<%= content_tag( 'li', "Open your terminal and navigate to the application directory." ) %>
-	<%= content_tag( 'li', "Pull the database from Heroku by running 'heroku pg:pull'." ) %>
-	<%= content_tag( 'li', "This will give you an up to date copy of the database on your machine." ) %>
+	<%= content_tag( 'li', 'Sign into Heroku' ) %>
+	<%= content_tag( 'li', 'Find and navigate to the application (parliament-calendar)' ) %>
+	<%= content_tag( 'li', "Navigate to the 'Resources' tab" ) %>
+	<%= content_tag( 'li', "Click on 'Heroku Scheduler'" ) %>
+	<%= content_tag( 'li', "Click on the cross with tooltip 'Delete this job'. This will stop the application importing updates from the Google calendars until we've finished" ) %>
+	<%= content_tag( 'li', "Open your terminal and navigate to the application directory" ) %>
+	<%= content_tag( 'li', "Pull the database from Heroku by running 'heroku pg:pull'. This will give you an up to date copy of the database on your machine" ) %>
 	<%= content_tag( 'li', "In your terminal, open the database by running 'psql parliament-calendar'" ) %>
 </ol>
 
@@ -31,31 +31,37 @@
 
 <%= content_tag( 'p', "For prorogations immediately preceding a dissolution, the proclamation will name the date of the prorogation. The prorogation period ends on the day of dissolution as named in the Dissolution Proclamation." ) %>
 
-<%= content_tag( 'p', "In order for the application to continue to function, we need to make changes to the database. The steps are:" ) %>
+<%= content_tag( 'p', "In order for the application to continue to function, we need to make changes to the database." ) %>
+
+<%= content_tag( 'p', "The steps are:" ) %>
 
 <ol>
 	<%= content_tag( 'li', "Find the current session. We do this by running 'select * from sessions where end_date is null;" ) %>
-	<%= content_tag( 'li', "Add an end date to the current session. We do this by running 'update sessions set end_date='DATE' where id = ID; where DATE is the date of prorogation in YYYY-MM-DD format and ID is the ID of current session." ) %>
+	<%= content_tag( 'li', "Add an end date to the current session. We do this by running 'update sessions set end_date='DATE' where id = ID; where DATE is the date of prorogation in YYYY-MM-DD format and ID is the ID of current session" ) %>
 	<%= content_tag( 'li', "Find the ID of the current parliament. We do this by running 'select * from parliament_periods order by start_date desc limit 1;'" ) %>
-	<%= content_tag( 'li', "Create the new prorogation. We do this by running 'insert into prorogation_periods (number, start_date, end_date, parliament_period_id) values (NUMBER, 'START_DATE', 'END_DATE', PARLIAMENT_ID);' where NUMBER is the number of the session in the parliament, START_DATE is the day following the prorogation date, END_DATE is either the day before the start date of the next session if the prorogation is followed by a session or the date of dissolution if the prorogation is followed by dissolution and PARLIAMENT_ID is the ID returned from the previous query." ) %>
-	<%= content_tag( 'li', "Run a rake task to populate prorogation days from the prorogation period. Note that this script does not exist yet and will need to be written when the next prorogation is announced.'" ) %>
+	<%= content_tag( 'li', "Create the new prorogation. We do this by running 'insert into prorogation_periods (number, start_date, end_date, parliament_period_id) values (NUMBER, 'START_DATE', 'END_DATE', PARLIAMENT_ID);' where NUMBER is the number of the session in the parliament, START_DATE is the day following the prorogation date, END_DATE is either the day before the start date of the next session if the prorogation is followed by a session or the date of dissolution if the prorogation is followed by dissolution and PARLIAMENT_ID is the ID returned from the previous query" ) %>
+	<%= content_tag( 'li', "Run a rake task to populate prorogation days from the prorogation period. Note that this script does not exist yet and will need to be written when the next prorogation is announced'" ) %>
 </ol>
 
 <%= content_tag( 'h2', 'What to do upon the announcement of dissolution' ) %>
 
 <%= content_tag( 'p', "If the dissolution is immediately preceded by a short prorogation period, we need to create the prorogation period as above. If the dissolution period is not immediately preceded by a short prorogation period, we need to set an end date for the current session following steps 1 and 2 above." ) %>
 
-<%= content_tag( 'p', " We then need to create a new dissolution period and a new parliament period.  The steps are:" ) %>
+<%= content_tag( 'p', " We then need to create a new dissolution period and a new parliament period." ) %>
+
+<%= content_tag( 'p', " The steps are:" ) %>
 
 <ol>
 	<%= content_tag( 'li', "Find the number of the current parliament. Do this by running 'select * from parliament_periods order by start_date desc limit 1;'" ) %>
-	<%= content_tag( 'li', "Create a new dissolution period. Do this by running: 'insert into dissolution_periods(number, start_date, end_date) values (NUMBER, 'START_DATE', 'END_DATE');' where NUMBER is the number of the current parliament, START DATE is the day following the dissolution date as named in the Dissolution Proclamation and END_DATE is the day before Parliament returns from dissolution as named in the Dissolution Proclamation." ) %>
-	<%= content_tag( 'li', "Run a rake task to populate dissolution days from the dissolution period. Note that this script does not exist yet and will need to be written when the next dissolution is announced.'" ) %>
+	<%= content_tag( 'li', "Create a new dissolution period. Do this by running: 'insert into dissolution_periods(number, start_date, end_date) values (NUMBER, 'START_DATE', 'END_DATE');' where NUMBER is the number of the current parliament, START DATE is the day following the dissolution date as named in the Dissolution Proclamation and END_DATE is the day before Parliament returns from dissolution as named in the Dissolution Proclamation" ) %>
+	<%= content_tag( 'li', "Run a rake task to populate dissolution days from the dissolution period. Note that this script does not exist yet and will need to be written when the next dissolution is announced" ) %>
 </ol>
 
 <%= content_tag( 'h2', 'Pushing the data to Heroku' ) %>
 
-<%= content_tag( 'p', "Having followed the appropriate steps above, the database on your machine will be ready to push to Heroku. The steps are:")%>
+<%= content_tag( 'p', "Having followed the appropriate steps above, the database on your machine will be ready to push to Heroku." ) %>
+
+<%= content_tag( 'p', "The steps are:" ) %>
 
 <ol>
 	<%= content_tag( 'li', "We need to make sure the database on Heroku is empty before we push our local copy. To do this run 'heroku pg:reset'" ) %>
@@ -64,14 +70,18 @@
 </ol>
 
 <%= content_tag( 'h2', 'Restarting the syncing script' ) %>
-<%= content_tag( 'p', "Once the edited data has been pushed to Heroku, we need to reinstate the script that syncs data from our Google calendars to the application. The steps are:" ) %>
+
+<%= content_tag( 'p', "Once the edited data has been pushed to Heroku, we need to reinstate the script that syncs data from our Google calendars to the application." ) %>
+
+<%= content_tag( 'p', "The steps are:" ) %>
+
 <ol>
-	<%= content_tag( 'li', 'Sign into Heroku.' ) %>
-	<%= content_tag( 'li', 'Find and navigate to the application (parliament-calendar).' ) %>
-	<%= content_tag( 'li', "Navigate to the 'resources' tab." ) %>
-	<%= content_tag( 'li', "Click on 'Heroku Scheduler'." ) %>
-	<%= content_tag( 'li', "Click on 'Add job'." ) %>
-	<%= content_tag( 'li', "Add a job to run 'rake sync' every 10 minutes and click 'Save'." ) %>
+	<%= content_tag( 'li', 'Sign into Heroku' ) %>
+	<%= content_tag( 'li', 'Find and navigate to the application (parliament-calendar)' ) %>
+	<%= content_tag( 'li', "Navigate to the 'resources' tab" ) %>
+	<%= content_tag( 'li', "Click on 'Heroku Scheduler'" ) %>
+	<%= content_tag( 'li', "Click on 'Add job'" ) %>
+	<%= content_tag( 'li', "Add a job to run 'rake sync' every 10 minutes and click 'Save'" ) %>
 </ol>
 
 
