--- a/app/views/meta/prorogation_and_dissolution.html.erb
+++ b/app/views/meta/prorogation_and_dissolution.html.erb
@@ -20,7 +20,7 @@
 	<%= content_tag( 'li', "Click on the cross with tooltip 'Delete this job'. This will stop the application importing updates from the Google calendars until we've finished" ) %>
 	<%= content_tag( 'li', "Open your terminal and navigate to the application directory" ) %>
 	<%= content_tag( 'li', "Pull the database from Heroku by running 'heroku pg:pull'. This will give you an up to date copy of the database on your machine" ) %>
-	<%= content_tag( 'li', "In your terminal, open the database by running 'psql parliament-calendar'" ) %>
+	<%= content_tag( 'li', "In your terminal, run 'psql parliament-calendar' to open the database" ) %>
 </ol>
 
 <%= content_tag( 'h2', 'What to do upon the announcement of prorogation' ) %>
