added link to github

--- a/app/views/meta/index.html.erb
+++ b/app/views/meta/index.html.erb
@@ -2,6 +2,7 @@
 	<%= content_tag( 'li', link_to( 'Calendar sync documentation', meta_calendar_sync_url ) ) %>
 	<%= content_tag( 'li', link_to( 'Prorogation and dissolution', meta_prorogation_dissolution_url ) ) %>
 	<%= content_tag( 'li', link_to( 'Database schema', meta_schema_url ) ) %>
+	<%= content_tag( 'li', link_to( 'The code', 'https://github.com/fantasticlife/egg-timer' ) ) %>
 </ol>
 
 <h2>Other calendars</h2>
